# ia-aprendizagem

./: .gitignore  Dockerfile  README.md  package.json  pyproject.toml  pytest.ini  requirements.txt
agents/: root_agent.py
api/: main.py  streaming.py  upload.py
config/: settings.py
examples/: client_example.py  curl_examples.sh
frontend/: Dockerfile  README.md
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: ChatBot.tsx
services/: agent_service.py  session_service.py
tests/: test_agent_service.py  test_api.py  test_session_service.py
